test/instance-checks-5.ktn
define example<a, b> (a -> b) { }
